--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>If I had</strong> a flower for every time I thought of you, I could walk through my garden forever!
+          Thank you for being the most adorable person ever and for giving me a reason to look forward to coming to school every single day!
         </p>
       </div>
     </div>
